# airs-compression

./: CHANGELOG.md  INSTALL.adoc  README.adoc  meson.build
.github/workflows/: release-build.yml
cross/: bcc2-gcc-gr712rc.txt
docs/: cliff.toml  meson.build
examples/: meson.build  simple_compression.c
lib/: cmp.h  cmp_header.h  meson.build
lib/common/: bitstream_writer.h  cmp_header.c  header_private.h  meson.build  sample_reader.h
lib/compress/: cmp.c  preprocess.c
programs/: airspacecli.c  meson.build
test/: get_library_version.py  meson.build  test_buildsetup.c  test_cmp.c  test_common.c  test_common.h  test_encoder.c  test_header.c  test_initialisation.c  test_preprocessing.c
